--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 PORT=5000
-QUEUE_SIZE=100
-WORKERS_COUNT=3
+QUEUE_SIZE=10
+QUEUE_NAME="apex"
+WORKERS_COUNT=1
+AMQP_URL="amqp://guest:guest@localhost:5672/"
+RABBITMQ_USER="guest"
+RABBITMQ_PASS="guest" 
+RABBITMQ_HOST="localhost"
+AMQP_QUEUE_NAME="apex"
