--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,11 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: "guest"
       RABBITMQ_DEFAULT_PASS: "guest"
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   email-service:
     build: .
@@ -19,7 +24,9 @@ services:
       RABBITMQ_HOST: "rabbitmq"
       RABBITMQ_USER: "guest"
       RABBITMQ_PASS: "guest"
+      AMQP_QUEUE_NAME: "apex"
     env_file:
       - .env
     depends_on:
-      - rabbitmq
+      rabbitmq:
+        condition: service_healthy
