--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ PORT=5000
 QUEUE_SIZE=10
 QUEUE_NAME="apex"
 WORKERS_COUNT=1
-AMQP_URL="amqp://guest:guest@localhost:5672/"
+AMQP_URL="amqp://guest:guest@rabbitmq:5672/"
 RABBITMQ_USER="guest"
 RABBITMQ_PASS="guest" 
 RABBITMQ_HOST="localhost"
